--- a/style.css
+++ b/style.css
@@ -12,7 +12,11 @@ body{
 
 }
 header{
-    color: transparent;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 main{
     height: 100vh;
@@ -32,7 +36,7 @@ main{
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .judul{
@@ -62,7 +66,7 @@ main{
     background-color: #C4DFAA;
     padding: 9px;
     border-radius: 24px;
-    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 
@@ -186,6 +190,10 @@ main{
     font-family:'Solway', serif ;
     font-size: 20px;
     transition: .4s;
+}
+
+footer{
+    color: transparent;
 }
 @media screen and (max-width: 600px) {
     .foto-profil{
